# umbral

./: CMakeCache.txt  CMakeLists.txt  Makefile  build-utils.cmake  cmake_install.cmake  compile_commands.json
include/: umbral.h
res/shaders/: basic_shader.frag.spv  basic_shader.vert.spv
src/: main.cpp
src/core/: internal.cpp  umb_arr.h  umb_common.h  umb_hash_table.h  umb_mem.cpp
src/gfx/: umb_gfx.h  umb_vk.cpp
src/gfx/shaders/basic_shader/: basic_shader.frag  basic_shader.vert
src/sys/: umb_app.cpp  umb_file.cpp  umb_window.cpp
